--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -81,14 +81,36 @@ margin: 0;
   color: white;
 }
 .buybtn{
-  padding: 10px 30px 10px 30px;
+  padding: 20px 30px 20px 30px;
   background-color: yellowgreen;
+width: 30%;
+  font-weight: 600;
+  border-radius: 3px;
+  border: white 1px solid;
+  color: white;
+}
+.buybtn2{
+height: 40px;
+  background-color: yellowgreen;
+width: 100%;
 
   font-weight: 600;
   border-radius: 3px;
   border: white 1px solid;
   color: white;
 }
+.buybtn3{
+  height: 40px;
+    background-color: rgb(205, 161, 50);
+  width: 100%;
+  
+    font-weight: 600;
+    border-radius: 3px;
+    border: white 1px solid;
+    color: rgb(0, 0, 0);
+    font-weight: 800;
+    text-transform: uppercase;
+  }
 .Link{
  padding: 10px 20px 10px 20px;
   text-decoration: none;
@@ -134,12 +156,19 @@ margin: 0;
 .incbtn{
   width: 35px;
   height: 35px;
-  background-color: #262626;
-  color: aliceblue;
+  border: 1px solid black;
+  border-radius: 3px;
+  margin-right: 13px;
+  margin-left: 13px;
+  background-color: white;
+  color: rgb(0, 0, 0);
   font-size: 16px;
   text-transform: uppercase;
   
   
+}
+.text28{
+  font-size: 28px;
 }
 .borr3{
   border-radius: 3px;
@@ -149,6 +178,40 @@ margin: 0;
   background-color: rgb(196, 196, 196);
   font-size: 23px;
 }
+.disableConsole{
+  width: 0;
+  visibility: hidden;
+  height: 200px;
+  padding: 10px 20px 10px 20px;
+  position:fixed;
+  top: 100px;
+  right: 40px;
+}
+.badmessage{
+  background-color: red;
+  color: white;
+}
+.goodmsg{
+  background-color: greenyellow;
+  color: rgb(0, 0, 0);
+  padding: 20px;
+}
+.padding15{
+  padding: 15px;
+}
+.w40{
+  width: 30%;
+}
+.consoleMessage{
+  width: 400px;
+  
+
+  height: 200px;
+  padding: 10px 20px 10px 20px;
+  position:fixed;
+  top: 100px;
+  right: 40px;
+}
 
 .goshop{
   display: flex;
@@ -157,7 +220,7 @@ margin: 0;
   justify-content: center;
 }
 .text{
-  padding: 5px 7px 5px 7px;
+  padding: 20px;
   background-color: bisque;
   border-radius: 3px;
   display: flex;
@@ -179,4 +242,20 @@ margin: 0;
   opacity: 0;
   visibility: hidden;
   height: 0;
+}
+
+.posre{
+  position: relative;
+}
+.marginbottom40{
+  margin-bottom: 40px;
+}
+
+.shadow{
+  box-shadow: 1px 20px 40px rgb(220, 209, 209);
+}
+
+
+.borderbottom{
+  border-bottom: 1px solid black;
 }
