--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -1,10 +1,11 @@
 .alllogin{
-    height: 100vh;
+   margin-top: 150px;
 }
 .loginboxBig{
     background-color: aquamarine;
     width: 60%;
-    height: 60%;
+    box-shadow: 3px 10px 30px rgb(205, 202, 202);
+   
   
 }
 .sideLogIn{
@@ -12,6 +13,7 @@
     background-color: rgb(227, 252, 252);
     animation: animation .5s ;
     animation-fill-mode: forwards;
+    padding: 30px 40px 30px 40px;
 }
 .centerForm2{
    height: 80%;
@@ -24,9 +26,10 @@
     outline: none;
     border: none;
     border-radius: 3px;
-outline: 1px solid black;
-outline-offset: 5px;
+
 background-color: transparent;
+background-color: white;
+
 }
 .form{
     width: 100%;
