--- a/client/src/css/media.css
+++ b/client/src/css/media.css
@@ -1,3 +1,10 @@
+@media screen and (max-width: 1000px) {
+
+.marginPage{
+    width: 90% !important;
+}
+}
+
 @media screen and (max-width: 800px) {
 .navphon{
     display: block !important;
@@ -10,6 +17,7 @@
     width: 100vw !important;
     background-color: aliceblue !important;
 }
+
 .navbarFirstChild{
     display: none;
     opacity: 0;
