--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -61,15 +61,17 @@ transition: all .5s ease;
     right: 5%;
 } */
 
+
+.marginPage{
+    width: 70%;
+}
+
 .navtopside{
     height: 3vh;
     background-color: yellowgreen;
 }
 .navAllBar{
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100vw;
+
    background-color: white;
 
 }
@@ -116,12 +118,25 @@ height: 80%;
 height: 90%;
 width: 400px;
 }
+.padd{
+    
+}
 .searchbtn{
     height: 100%;
     border: none;
  padding: 10px 20px 10px 20px;
  background-color: #262626;
  color: white;
+}
+.cardlinkr{
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 5px;
+    text-decoration: none;
+    
+}
+.cardlinkr:hover{
+    background-color: aliceblue;
 }
 
 /* start cart section  */
@@ -138,8 +153,41 @@ font-weight: 600;
     font-size: 14px;
 }
 
+.padlinkf{
+    border: 1px solid black;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+   
+}
+.linksActive{
+    width: 100%;
+position: absolute;
+top: 100%;
+left: 0;
+border: 1px solid black;
+background-color: white;
+}
+.linksDisable{
+    width: 100%;
+position: absolute;
+top: 100%;
+left: 0;
+border: 1px solid black;
+height: 0;
+opacity: 0;
+visibility: hidden;
+display: none;
 
-.navPopUp{
+}
+
+.brbottom{
+    border-bottom: 1px solid black;
+}
+
+/* .navPopUp{
     height: 400px;
     width: 40vw;
     position: absolute;
@@ -152,18 +200,10 @@ font-weight: 600;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-.firstPopChild{
-    height: 90%;
-    width: 100%;
-    background-color: rgb(255, 255, 255);
-    border-radius: 3px;
-    overflow-y: scroll;
-    
- 
-}
+} */
 
-.disabledNav{
+
+/* .disabledNav{
     height: 0;
     width: 40vw;
     position: absolute;
@@ -174,18 +214,14 @@ font-weight: 600;
     border-radius: 3px;
     visibility: hidden;
     display: none;
-}
-.element{
-    width: 100%;
- 
-    
-}
+} */
+
 .imagecard{
     
 }
 .cartcard{
-    padding: 10px;
-    
+    padding: 15px;
+   
 }
 .info{
    
@@ -198,7 +234,7 @@ font-weight: 600;
     
 }
 .elecart{
-    padding: 10px;
+    padding: 20px;
     grid-gap: 35px;
 }
 
