--- a/client/src/css/store.css
+++ b/client/src/css/store.css
@@ -35,7 +35,7 @@ margin-top: 50px;
 }
 
 .containert{
-    margin-top: 150px;
+    margin-top: 100px;
     padding: 20px 20px 20px 20px;
 
 }
@@ -61,11 +61,14 @@ margin-top: 50px;
 }
 
 .boxsize{
-    justify-content: space-around;
+
     height: 100%;
 }
 .box_inside{
     padding: 10px;
+   
+}
+.h50vh{
     height: 50vh;
 }
 .namecommend{
@@ -134,12 +137,22 @@ margin-top: 50px;
     margin-bottom: 15px;
     padding: 10px;
 }
-.paddpage{
+/* .paddpage{
     padding-left: 150px;
     padding-right: 150px;
-}
+} */
 .margl{
     margin-left: 15px;
+}
+.addtobtn{
+    width: 100%;
+    height: 100%;
+    background-color: #262626;
+    color: white;
+    font-weight: 600;
+    font-size: 1.7rem;
+    padding-top: 7px;
+    padding-bottom: 7px;
 }
 .margr{
     margin-right: 15px;
