--- a/client/src/css/placeorder.css
+++ b/client/src/css/placeorder.css
@@ -1,7 +1,7 @@
 .grid-3{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    background-color: beige;
+    background-color: rgb(222, 245, 220);
     align-items: center;
     justify-content: center;
     padding: 30px;
