--- a/dashboard/src/App.css
+++ b/dashboard/src/App.css
@@ -51,3 +51,11 @@ td{
   padding: 15px;
   text-align: center;
 }
+/* .theUserInfo{
+ width: 80%;
+  justify-content: space-around;
+} */
+
+.side{
+  margin-left: 55px;
+}
