--- a/client/src/css/store.css
+++ b/client/src/css/store.css
@@ -1,6 +1,6 @@
 .card{
   min-height: 28vh;
-    width: 400px;
+ width: 90%;
     padding: 13px;
     border: 1px solid rgb(228, 228, 228);
     border-radius: 3px;
@@ -27,6 +27,7 @@ margin-top: 50px;
     grid-template-columns: 1fr 1fr 1fr;
 margin-bottom: 50px;
     grid-gap: 15px;
+    
 }
 
 .infobox{
